--- a/game/styles.css
+++ b/game/styles.css
@@ -9,10 +9,21 @@
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	width: 50px;
-	height: 50px;
-	background-color: red;
+	width: 60px;
+	height: 80px;
+	background: url(img/bullHero.png);
+	background-size: contain;
+	transform: translate(-50%, -50%) rotate(-90deg);
+	transition: all 0.1s;
+}
+.coin {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 30px;
+	height: 30px;
+	background: yellow;
 	border-radius: 50%;
 	transform: translate(-50%, -50%);
-	transition: all 0.1s;
+	transition: all 0.1s;	
 }
